--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -11,7 +11,7 @@
         <th scope="col">Description</th>
         <th scope="col">Language</th>
         <th scope="col">   </th>
-        <!-- <th colspan="3"></th> -->
+        <th colspan="3"></th> 
       </tr>
     </thead>
 
@@ -22,7 +22,7 @@
           <!-- <td><%#= album.artist_id %></td> -->
           <td><%= album.description %></td>
           <td><%= album.language %></td>
-          <td><%= link_to 'Show', album_path(album),class:"btn btn-primary btn-sm" %></td>
+          <td><%= link_to 'Show', album_path(album),class:"btn btn-primary" %></td>
           
           <td><div class="center aligned ui container">
                             <% if current_user.playlists.present?%>
@@ -40,7 +40,7 @@
           <% end %>
     </tbody>
   </table>
-     <%= link_to 'Go to Playlist',playlist_path(current_user),class:"btn btn-success",style:"width:450px;margin-left:400px;"%>
+     <%#= link_to 'Go to Playlist',playlist_path(current_user),class:"btn btn-success",style:"width:450px;margin-left:400px;"%>
   <br>
   <%else%>
 
@@ -54,6 +54,8 @@
         <th scope="col">  </th>
         <th scope="col">  </th>
         <th scope="col">  </th>
+        <th scope="col">   </th>
+        <th colspan="3"></th> 
        </tr>
     </thead>
     <tbody>
