--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -11,7 +11,7 @@
         <!-- <th scope="col">Artist</th> -->
         <th scope="col">Description</th>
         <th scope="col">   </th>
-        <!-- <th colspan="3"></th> -->
+        <th colspan="3"></th> 
       </tr>
     </thead>
 
