--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -1,17 +1,20 @@
 <%= render 'layouts/display' %>
 
 
-<div  style="width:50%; margin-left:200px;margin-top:50px">
+<div  style="width:50%; margin-left:500px;margin-top:50px">
     
     <%= form_with(model: @playlist, local: true) do |form| %>
       <div class="field form-group">
-        <%= form.text_field :title,class:"form-control",placeholder:"Title"%><br>
+        <%= form.text_field :title,class:"form-control w-100",placeholder:"Title"%><br>
       </div>
 
       <div>
-        <%= form.text_field :description,class:"form-control",placeholder:"Description" %><br>
+        <%= form.text_field :description,class:"form-control w-100",placeholder:"Description" %><br>
       </div>
-
+      
+      <div>
+        <%= form.text_field :image_url,class:"form-control w-100",placeholder:"Image_Url" %><br>
+      </div>
 
       <%= hidden_field_tag :user_id, @user %>
       <div>
