--- a/app/views/artists/shared/_links.html.erb
+++ b/app/views/artists/shared/_links.html.erb
@@ -1,13 +1,14 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+<p class="fw-bold mt-2 pt-1 mb-0 text-info">Already have an account? <%= link_to "Log in", new_session_path(resource_name),class: "text-danger" %><br /></p>
+  
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <p class="fw-bold mt-2 pt-1 mb-0">Don't have an account? <%= link_to t(".sign_up"), new_registration_path(resource_name),class:"text-danger" %><br /></p>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <%= link_to "Forgot your password?", new_password_path(resource_name),class: "text-info" %><br />
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
