--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,48 +1,75 @@
 <%= render 'layouts/display' %>
+<section class="vh-100">
+  <div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-9 col-lg-6 col-xl-5">
+        <img src="https://wallpaperaccess.com/full/1162901.jpg"
+          class="img-fluid" alt="Sample image">
+      </div>
+      <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+            <p class="lead fw-normal mb-0 me-3 text-primary">Sign up</p>
+          </div>
+          <!-- Email input -->
+           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+           <%= bootstrap_devise_error_messages! %>
+          <div class="form-outline mb-4">
+              <div class="form-group">
+                <%= f.label :email %>
+                <%= f.email_field :email, autofocus: true, autocomplete: 'email', placeholder: "Enter email" ,class: 'form-control form-control-lg' %>
+              </div>
+          </div>
+          
+          <div class="form-outline mb-4">
+              <div class="form-group">
+                <%= f.label :username %>
+                <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control', placeholder: "Enter password" %>
+              </div>
+            </div>
 
-<h1><%= t('.sign_up') %></h1>
-<div class="row">
-  <div class="col-7">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= bootstrap_devise_error_messages! %>
+            <div class="form-outline mb-4">
+              <div class="form-group">
+                <%= f.label :image_url %>
+                <%= f.text_field :image_url, autofocus: true, autocomplete: 'image_url', class: 'form-control', placeholder: "Enter image_url" %>
+              </div>
+            </div>
 
-      <div class="form-group">
-        <%= f.label :username %>
-        <%= f.text_field :username, autofocus: true, autocomplete: 'username', class: 'form-control' %>
+            <div class="form-outline mb-4">
+              <div class="form-group">
+                <%= f.label :phone %>
+                <%= f.text_field :phone, autofocus: true, autocomplete: 'phone', class: 'form-control' , placeholder: "Enter phone"%>
+              </div>
+            </div>
+
+            <div class="form-outline mb-4">
+                <div class="form-group">
+                  <%= f.label :password %>
+                  <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' , placeholder: "Enter password"%>
+
+                  <% if @minimum_password_length %>
+                    <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
+                  <% end %>
+                </div>
+              </div>
+              
+              <div class="form-outline mb-4">
+                <div class="form-group">
+                  <%= f.label :password_confirmation %>
+                  <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' , placeholder: "Enter password confirmation" %>
+                </div>
+              </div>
+
+
+                <div class="form-group">
+                  <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
+                </div>
+          <%end%>
+          <%= render 'devise/shared/links' %>
       </div>
 
-      <div class="form-group">
-        <%= f.label :phone %>
-        <%= f.text_field :phone, autofocus: true, autocomplete: 'phone', class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
-      </div>
-      
-      <div class="form-group">
-        <%= f.label :image_url %>
-        <%= f.text_field :image_url, autofocus: true, autocomplete: 'image_url', class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
+    </div>
+  </div>
 
-        <% if @minimum_password_length %>
-          <small class="form-text text-muted"><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></small>
-        <% end %>
-      </div>
+  </div>
+</section>
 
-      <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
-      </div>
-</div>
-</div>
-<% end %>
-
-<%= render 'devise/shared/links' %>
