--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,14 +1,14 @@
 <div class="form-group">
   <%- if controller_name != 'sessions' %>
-    <%= link_to t(".sign_in"), new_session_path(resource_name) %><br />
+   <p class="fw-bold mt-2 pt-1 mb-0 text-info">Already have an account? <%= link_to "Log in", new_session_path(resource_name),class: "text-danger" %><br /></p>
   <% end -%>
 
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-   <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <%= link_to t(".sign_up"), new_registration_path(resource_name) %><br /></p>
+   <p class="fw-bold mt-2 pt-1 mb-0">Don't have an account? <%= link_to t(".sign_up"), new_registration_path(resource_name),class:"text-danger" %><br /></p>
   <% end -%>
 
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to t(".forgot_your_password"), new_password_path(resource_name) %><br />
+    <%= link_to t(".forgot_your_password"), new_password_path(resource_name),class:"text-info" %><br />
   <% end -%>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
