--- a/app/views/layouts/_display.html.erb
+++ b/app/views/layouts/_display.html.erb
@@ -8,21 +8,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-          <li class="r4"><%= link_to'Home',root_path,class: "nav-link active" %></li>
+          <li class="r4"><%= link_to'Home',root_path,class: "nav-link text-decoration-none" %></li>
           <%if user_signed_in?%>
             
-            <li><%= link_to'Albums',albums_path, class:"nav-link"%></li>
-            <li ><%= link_to'Songs',songs_path, class: "nav-link"%></li>
-            <li ><%= link_to'MyPlaylists',playlists_path, class: "nav-link"%></li>
-            <li ><%= link_to'Profile',user_path(current_user), class: "nav-link"%></li>
-            <li><%= link_to 'Sign Out',destroy_user_session_path,method: :delete ,class: "nav-link"%></li>
+            <li><%= link_to'Albums',albums_path, class:"nav-link text-decoration-none"%></li>
+            <li ><%= link_to'Songs',songs_path, class: "nav-link text-decoration-none"%></li>
+            <li ><%= link_to'MyPlaylists',playlists_path, class: "nav-link text-decoration-none"%></li>
+            <li ><%= link_to'Profile',user_path(current_user), class: "nav-link text-decoration-none"%></li>
+            <li><%= link_to 'Sign Out',destroy_user_session_path,method: :delete ,class: "nav-link text-decoration-none"%></li>
           <%elsif artist_signed_in?%>
-            <li ><%= link_to'Albums',albums_path(current_artist), class: "nav-link"%></li>
-            <li ><%= link_to'Profile',artist_path(current_artist), class: "nav-link"%></li>
-            <li><%= link_to 'Sign Out',destroy_artist_session_path,method: :delete ,class: "nav-link"%></li>
+            <li ><%= link_to'Albums',albums_path(current_artist), class: "nav-link text-decoration-none"%></li>
+            <li ><%= link_to'Profile',artist_path(current_artist), class: "nav-link text-decoration-none"%></li>
+            <li><%= link_to 'Sign Out',destroy_artist_session_path,method: :delete ,class: "nav-link text-decoration-none"%></li>
           <%else%>
-                <li><%= link_to 'Sign In',new_user_session_path ,class: "nav-link"%></li>
-                <li><%= link_to 'Sign In As Artist',new_artist_session_path ,class: "nav-link"%></li>
+                <li><%= link_to 'Sign In',new_user_session_path ,class: "nav-link text-decoration-none"%></li>
+                <li><%= link_to 'Sign In As Artist',new_artist_session_path ,class: "nav-link text-decoration-none"%></li>
           <%end%>
       </ul>
     </div>
