--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -10,19 +10,19 @@
   </div>
 <% end %>
 
-<div  style="width:50%; margin-left:200px;margin-top:50px">
+<div  style="width:50%; margin-left:500px;margin-top:50px">
     
     <%= form_with model: @playlist, url: playlists_path ,local: true do |form| %>
       <div class="field form-group">
-        <%= form.text_field :title,class:"form-control",placeholder:"Title"%><br>
+        <%= form.text_field :title,class:"form-control w-100",placeholder:"Title"%><br>
       </div>
 
       <div>
-        <%= form.text_area :description,class:"form-control",placeholder:"Description" %><br>
+        <%= form.text_area :description,class:"form-control w-100",placeholder:"Description" %><br>
       </div>
      
       <div>
-        <%= form.text_field :image_url,class:"form-control",placeholder:"Image_Url" %><br>
+        <%= form.text_field :image_url,class:"form-control w-100",placeholder:"Image_Url" %><br>
       </div>
       <div>
 
