--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -25,7 +25,7 @@
           <td><%= song.duration %></td>
           <td><%= song.lyrics %></td>
           
-          <td><%= link_to 'Show', song_path(song),class:"btn btn-primary" %></td>
+          <td><%= link_to 'Show', song_path(song),class:"btn btn-primary text-decoration-none" %></td>
           
         <td>  <div class="center aligned ui container">
                             <% if current_user.playlists.present?%>
@@ -67,15 +67,15 @@
         <td><%= s.duration %></td>
         <!-- <td><%#= s.lyrics %></td> -->
 
-        <td><%= link_to 'Show',song_path(s),class:"btn btn-primary btn-sm"%></td>
-        <td><%= link_to 'Update',edit_song_path(s),class:"btn btn-primary btn-sm"%></td>
+        <td><%= link_to 'Show',song_path(s),class:"btn btn-primary btn-sm text-decoration-none"%></td>
+        <td><%= link_to 'Update',edit_song_path(s),class:"btn btn-primary btn-sm text-decoration-none"%></td>
         <td><%= button_to 'Remove',song_path(s),method: :delete,data: { confirm: 'Are you sure?'},class:"btn btn-danger btn-sm"%></td>
       </tr>
       <%end%>
     </tbody>
   </table>
   <%#end%>
-  <%= link_to "Add new song", new_song_path(:artist_id=>params[:artist_id],:album_id=>params[:album_id]),class:"btn btn-success",style:"margin-left:1300px;width:300px" %>
+  <%= link_to "Add new song", new_song_path(:artist_id=>params[:artist_id],:album_id=>params[:album_id]),class:"btn btn-success text-decoration-none",style:"margin-left:1300px;width:300px" %>
   <% if flash %>
     <p class="notice text-success mt-4"><%= notice %></p>
 <% end %>
